[gd_scene load_steps=26 format=3 uid="uid://ciu4n5mm4yalf"]

[ext_resource type="Script" path="res://scripts/scenes/arena_scene.gd" id="1_pcskl"]
[ext_resource type="Texture2D" uid="uid://dp8vxtp38jmwt" path="res://images/sprites/scenario/fundo.png" id="1_r57dj"]
[ext_resource type="PackedScene" uid="uid://l5k8r4imad1n" path="res://entities/player.tscn" id="2_eae65"]
[ext_resource type="Texture2D" uid="uid://6ceyoobxgm3x" path="res://images/sprites/scenario/língua.png" id="2_mrd8v"]
[ext_resource type="Texture2D" uid="uid://ewa70pn7txf2" path="res://images/sprites/scenario/dentes 2.png" id="3_qosaq"]
[ext_resource type="Texture2D" uid="uid://chawcea4qo6wn" path="res://images/sprites/scenario/dentes 1.png" id="4_0o3ap"]
[ext_resource type="Texture2D" uid="uid://b6mh2mlhrbafj" path="res://images/sprites/scenario/úvula.png" id="4_7so6q"]
[ext_resource type="AudioStream" uid="uid://bgyb4ou7vmsaj" path="res://sounds/bmg/loop.ogg" id="5_6pcj1"]
[ext_resource type="Texture2D" uid="uid://x7b72w3ayowc" path="res://images/sprites/scenario/filtro.png" id="6_k3qhe"]
[ext_resource type="PackedScene" uid="uid://bx1df7bsyilqu" path="res://entities/boss_spawn.tscn" id="7_exe7a"]
[ext_resource type="AudioStream" uid="uid://c5ofusjepacql" path="res://sounds/bmg/boss.ogg" id="7_kqgr2"]
[ext_resource type="AudioStream" uid="uid://dcob3es6ej8c1" path="res://sounds/bmg/pause_end_credit.ogg" id="8_4s71f"]
[ext_resource type="PackedScene" uid="uid://bsc7efek5eaue" path="res://entities/enemy_spawn.tscn" id="9_fpq5y"]
[ext_resource type="PackedScene" uid="uid://bjqlx7sbk62ii" path="res://entities/ui/ui.tscn" id="11_kcgsc"]
[ext_resource type="Texture2D" uid="uid://c2gff0ps28fhn" path="res://images/sprites/scenario/Ilustração_Sem_Título.png" id="12_y6ngm"]
[ext_resource type="Texture2D" uid="uid://dkfqsp7j0kth4" path="res://images/sprites/scenario/lingua.png" id="13_f7j83"]
[ext_resource type="PackedScene" uid="uid://j5s6of04as4u" path="res://entities/helicopter.tscn" id="13_q6uos"]
[ext_resource type="PackedScene" uid="uid://chwg0d5ka3p7q" path="res://entities/chest.tscn" id="13_weifx"]
[ext_resource type="Texture2D" uid="uid://cqehjdnbe5m16" path="res://images/sprites/scenario/dentes_baixo.png" id="14_nwoqq"]
[ext_resource type="PackedScene" uid="uid://bhdb8ylg22vmm" path="res://entities/enemies/slime_boss.tscn" id="15_kw4t1"]
[ext_resource type="Texture2D" uid="uid://05msy4rdwegw" path="res://images/sprites/scenario/dentes_cima.png" id="15_yuhyt"]
[ext_resource type="PackedScene" uid="uid://bebayrx7sxxvb" path="res://entities/enemies/projectile_boss.tscn" id="20_74pcy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtaio"]
size = Vector2(84, 1468)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aojf6"]
size = Vector2(376, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_fbng7"]
radius = 44.0114

[node name="ArenaScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_pcskl")
enemy_spawn = ExtResource("9_fpq5y")
spawn_upper_limit = Vector2(-231, 333)
spawn_lower_limit = Vector2(2112, 975)
chest_scene = ExtResource("13_weifx")
helicopter_scene = ExtResource("13_q6uos")
game_bmg = ExtResource("5_6pcj1")
boss_bmg = ExtResource("7_kqgr2")
victory_bmg = ExtResource("8_4s71f")
slime_boss = ExtResource("15_kw4t1")
projectile_boss = ExtResource("20_74pcy")
boss_particle = ExtResource("7_exe7a")

[node name="Scenario" type="Node2D" parent="."]
z_index = -10
position = Vector2(960, 540)

[node name="Sujo" type="Node2D" parent="Scenario"]

[node name="Fundo" type="Sprite2D" parent="Scenario/Sujo"]
z_index = -2
position = Vector2(0, -575)
texture = ExtResource("1_r57dj")

[node name="Chao" type="Sprite2D" parent="Scenario/Sujo"]
position = Vector2(0, 235)
texture = ExtResource("2_mrd8v")

[node name="LowerDentes" type="Sprite2D" parent="Scenario/Sujo"]
z_index = 20
position = Vector2(0, 506)
texture = ExtResource("4_0o3ap")

[node name="UpperDentes" type="Sprite2D" parent="Scenario/Sujo"]
position = Vector2(0, -622)
texture = ExtResource("3_qosaq")

[node name="Limpo" type="Node2D" parent="Scenario"]
visible = false

[node name="Fundo" type="Sprite2D" parent="Scenario/Limpo"]
z_index = -2
position = Vector2(0, -575)
texture = ExtResource("12_y6ngm")

[node name="Chao" type="Sprite2D" parent="Scenario/Limpo"]
position = Vector2(0, 235)
texture = ExtResource("13_f7j83")

[node name="LowerDentes" type="Sprite2D" parent="Scenario/Limpo"]
z_index = 20
position = Vector2(0, 632)
texture = ExtResource("14_nwoqq")

[node name="UpperDentes" type="Sprite2D" parent="Scenario/Limpo"]
position = Vector2(0, -714)
texture = ExtResource("15_yuhyt")

[node name="Uvula" type="Sprite2D" parent="Scenario"]
z_index = -1
position = Vector2(-2, -886)
texture = ExtResource("4_7so6q")
offset = Vector2(2, 271)

[node name="Filtro" type="Sprite2D" parent="Scenario"]
z_index = 30
position = Vector2(0, -6)
scale = Vector2(1, 1.03211)
texture = ExtResource("6_k3qhe")

[node name="Player" parent="." instance=ExtResource("2_eae65")]
position = Vector2(960, 540)

[node name="Camera2D" type="Camera2D" parent="Player"]
process_mode = 3
position = Vector2(2.08165e-12, 2.08165e-12)
limit_left = -314
limit_top = -341
limit_right = 2231
limit_bottom = 1415

[node name="Walls" type="Node2D" parent="."]

[node name="SideWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-327, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/SideWall"]
position = Vector2(0, 724)
shape = SubResource("RectangleShape2D_rtaio")

[node name="SideWall2" type="StaticBody2D" parent="Walls"]
position = Vector2(2244, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/SideWall2"]
position = Vector2(0, 724)
shape = SubResource("RectangleShape2D_rtaio")

[node name="MinorWall" type="StaticBody2D" parent="Walls"]
position = Vector2(709, 243)
rotation = 0.176417

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall2" type="StaticBody2D" parent="Walls"]
position = Vector2(346, 180)
rotation = 0.176417

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall2"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall3" type="StaticBody2D" parent="Walls"]
position = Vector2(-21, 181)
rotation = -0.187065

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall3"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall4" type="StaticBody2D" parent="Walls"]
position = Vector2(-359, 249)
rotation = -0.187065

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall4"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall5" type="StaticBody2D" parent="Walls"]
position = Vector2(1119, 231)
rotation = -0.187065

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall5"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall6" type="StaticBody2D" parent="Walls"]
position = Vector2(1484, 157)
rotation = -0.187065

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall6"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall7" type="StaticBody2D" parent="Walls"]
position = Vector2(1854, 115)
rotation = -0.0214445

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall7"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall8" type="StaticBody2D" parent="Walls"]
position = Vector2(2199, 165)
rotation = 0.329179

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall8"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall10" type="StaticBody2D" parent="Walls"]
position = Vector2(2081, 1101)
rotation = -0.628362

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall10"]
position = Vector2(17.9196, -45.0764)
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall11" type="StaticBody2D" parent="Walls"]
position = Vector2(1765, 1261)
rotation = -0.276041

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall11"]
position = Vector2(-6.52833, -31.9904)
rotation = -0.0548612
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall12" type="StaticBody2D" parent="Walls"]
position = Vector2(1417, 1342)
rotation = -0.18307

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall12"]
position = Vector2(-3.35105, -14.8583)
rotation = -0.0347766
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall13" type="StaticBody2D" parent="Walls"]
position = Vector2(1064, 1374)
rotation = 0.00338203

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall13"]
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall14" type="StaticBody2D" parent="Walls"]
position = Vector2(691, 1360)
rotation = 0.0768035

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall14"]
position = Vector2(45.2506, -11.5059)
rotation = 0.0448864
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall15" type="StaticBody2D" parent="Walls"]
position = Vector2(324, 1314)
rotation = 0.164494

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall15"]
position = Vector2(38.0023, -39.7597)
rotation = 0.0744125
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall16" type="StaticBody2D" parent="Walls"]
position = Vector2(-26, 1206)
rotation = 0.448538

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall16"]
position = Vector2(25.7425, -75.6461)
rotation = -0.00707466
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall17" type="StaticBody2D" parent="Walls"]
position = Vector2(-304, 1074)
rotation = 0.448538

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall17"]
position = Vector2(4.75301, -77.7524)
shape = SubResource("RectangleShape2D_aojf6")

[node name="MinorWall9" type="StaticBody2D" parent="Walls"]
position = Vector2(930, 270)
rotation = -0.02532

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MinorWall9"]
position = Vector2(-10.1234, 4.74526)
shape = SubResource("CircleShape2D_fbng7")

[node name="EnemySpawn" parent="." instance=ExtResource("9_fpq5y")]
position = Vector2(547, 656)

[node name="UI" parent="." instance=ExtResource("11_kcgsc")]

[node name="HelicopterSpawn" type="Marker2D" parent="."]
position = Vector2(1356, -351)

[node name="ChestSpawn" type="Marker2D" parent="."]
position = Vector2(629, 394)

[node name="SlimeBossLocation" type="Marker2D" parent="."]
position = Vector2(885, 540)
